Honestly not quite sure what I'm doing. I tried creating a transition.

--- a/index.html
+++ b/index.html
@@ -5,18 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, intial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 </head>
 <body>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" 
-			integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous">
-		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"
-			integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous">
-		</script>
-		<script src="main.js"> </script>
-	
-		
+		<!-- 
 				<div class="header">
 					<div class="inner-header">
 						<ul class="navigation">
@@ -27,8 +19,9 @@
 								<li>RESUME</li>
 							</a>
 							<a><li>CONTACT ME</li></a>
-							</ul>
+						</ul>
 						</div>
+		-->
 	<!-- GOOD HEADER
 	`	<div class="landing-page">
 			<img src="file:///Users/denisltatar/Desktop/Personal%20Website/My%20Portfolio/background.png" alt="landing" height="850" width="1600" >
@@ -44,9 +37,22 @@
 	-->
 
 <header>
+	<nav>
+		<h3 id="logo">Denis Tatar</h3> 
+		<ul class="navigation">
+				<a><li>HOME</li></a>
+				<a><li>ABOUT</li></a>
+				<a><li>PROJECTS</li></a>
+				<a href="file:///Users/denisltatar/OneDrive%20-%20University%20of%20Waterloo/OneDrive/School/1st%20Year/Resume/First%20Co-op%20Resume/PDFs/Denis%20Tatar%20Resume.pdf"> 
+					<li>RESUME</li>
+				</a>
+				<a><li>CONTACT ME</li></a>
+		</ul>
+	</nav>
 	<section>
 		<div class="hero">
-			<img src="file:///Users/denisltatar/Desktop/Personal%20Website/My%20Portfolio/background.png">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
+			<h1 class="headline">Hello. My name is Denis.</h1>
 		</div>
 	</section>
 </header>
@@ -306,5 +312,11 @@
 			</div>
 	</div>
 	 -->
+	 	<script src="https ://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" 
+			integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous">
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"
+		 integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous"></script>
+		<script src="main.js"> </script>
 </body>
 </html>
