Finally got back to where I started, moving onto the "About Me" section.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,25 @@
 		</div>
 	-->
 
+	<!--
+	<div class="header">
+		<div class="inner-header">
+			<ul class="navigation">
+				<a><li>HOME</li></a>
+				<a><li>ABOUT</li></a>
+				<a><li>PROJECTS</li></a>
+				<a href="file:///Users/denisltatar/OneDrive%20-%20University%20of%20Waterloo/OneDrive/School/1st%20Year/Resume/First%20Co-op%20Resume/PDFs/Denis%20Tatar%20Resume.pdf"> 
+					<li>RESUME</li>
+				</a>
+				<a><li>CONTACT ME</li></a>
+				</ul>
+			</div>
+	</div>
+-->
+
+	
 <header>
 	<nav>
-		<h3 id="logo">Denis Tatar</h3> 
 		<ul class="navigation">
 				<a><li>HOME</li></a>
 				<a><li>ABOUT</li></a>
@@ -50,16 +66,12 @@
 		</ul>
 	</nav>
 	<section>
-		<div class="hero">
+		<div class="landing-pic">
 			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
-			<h1 class="headline">Hello. My name is Denis.</h1>
 		</div>
 	</section>
 </header>
 
-<div class="slider">
-	
-</div>
 	
 	<!-- About Section -->
 	
