Added the arrow transition on landing page. Created test files as well.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
 			</div>
 	</div>
 -->
-
-	
 <header>
 	<nav>
 		<ul class="navigation">
@@ -68,9 +66,12 @@
 	<section>
 		<div class="landing-pic">
 			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
+			<a href="#" class="arrow right"></a>
 		</div>
 	</section>
 </header>
+
+
 
 	
 	<!-- About Section -->
