--- a/index.html
+++ b/index.html
@@ -66,10 +66,22 @@
 	<section>
 		<div class="landing-pic">
 			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
-			<a href="#" class="arrow right"></a>
+			<a href="#" class="arrow right1"></a>
+			
 		</div>
 	</section>
 </header>
+
+	<div class="about-me">
+		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground.png">
+		<a href="#" class="arrow right2"></a>
+		<div class="socials">
+				<a><li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/insta.png" alt="insta" height="30" width="30"></li></a>
+				<a><li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/github.png" alt="github" height="30" width="30"></li></a>
+				<a><li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Linkedin.png" alt="linkedin" height="30" width="30"></li></a>
+		</div>
+	</div>
+
 
 
 
