--- a/test.html
+++ b/test.html
@@ -1,12 +1,101 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>My Test Website</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, intial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="test.css">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	  <!-- Cool Icons -->
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	 <link rel="stylesheet" type="text/css" href="test.css">
+	 <!-- <style>
+		/*
+		html {
+			font-size: 11px;
+			font-family: DIN Condensed;
+			color: black;
+		} */
+
+		.navbar {
+			font-family: DIN Condensed;
+			font-size: 25px;
+			margin-bottom: 0;
+			border-radius: 0;
+			background-color:  transparent;
+			color: black;
+			padding: 1% 0;
+			font-size: 1.2em;
+			border: 0;
+		}
+
+		.navbar-brand {
+			float: left;
+			min-height: 55px;
+			padding: 0 15px 5px;
+		}
+
+		.navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, 
+		.navbar-inverse .navbar-nav .active a:hover {
+			color: rgb(255, 72, 72);
+			background-color:  transparent;
+		}
+
+		.navbar-inverse .navbar-nav li a {
+			color: black;
+
+		}
+	 </style> -->
+ 	
 </head>
 <body>
         <!-- <a href="#" class="arrow left"></a> -->
-        <a href="#" class="arrow right"></a>
+		<!-- <a href="#" class="arrow right"></a> -->
+		
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">
+						
+					</a>
+				</div>
+				<div class="collapse navbar-collapse" id="myNavbar">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="active"><a href="#">HOME</a></li>
+						<li><a href="#">ABOUT</a></li>
+						<li><a href="#">PROJECTS</a></li>
+						<li><a href="#">RESUME</a>
+							<a href="file:///Users/denisltatar/OneDrive%20-%20University%20of%20Waterloo/OneDrive/School/1st%20Year/Resume/First%20Co-op%20Resume/PDFs/Denis%20Tatar%20Resume.pdf"></a>
+						</li>
+						<li><a href="#">CONTACT</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+	<div class="landing-pic">
+		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
+		<a href="#" class="arrow right1"></a>
+	</div>
+		
+	<div class="socials">
+			<a href="https://www.instagram.com/denisltatar/">
+				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/insta.png" alt="insta" height="30" width="30"></li>
+			</a>
+			<a href="https://github.com/denisltatar">
+				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/github.png" alt="github" height="30" width="30"></li>
+			</a>
+			<a href="https://www.linkedin.com/in/denisltatar/">
+				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Linkedin.png" alt="linkedin" height="30" width="30"></li>
+			</a>
+	</div>
+
 </body>    
 </html>
