Almost finished the home landing page. moving onto "About" section

--- a/test.html
+++ b/test.html
@@ -68,13 +68,12 @@
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href="#">HOME</a></li>
-						<li><a href="#">ABOUT</a></li>
-						<li><a href="#">PROJECTS</a></li>
-						<li><a href="#">RESUME</a>
-							<a href="file:///Users/denisltatar/OneDrive%20-%20University%20of%20Waterloo/OneDrive/School/1st%20Year/Resume/First%20Co-op%20Resume/PDFs/Denis%20Tatar%20Resume.pdf"></a>
+						<li class="home"><a href="#">HOME</a></li>
+						<li class="about"><a href="#">ABOUT</a></li>
+						<li class="projects"><a href="#">PROJECTS</a></li>
+						<li class="resume"><a href="file:///Users/denisltatar/OneDrive%20-%20University%20of%20Waterloo/OneDrive/School/1st%20Year/Resume/First%20Co-op%20Resume/PDFs/Denis%20Tatar%20Resume.pdf">RESUME</a>
 						</li>
-						<li><a href="#">CONTACT</a></li>
+						<li class="contact"><a href="#">CONTACT</a></li>
 					</ul>
 				</div>
 			</div>
@@ -85,17 +84,24 @@
 		<a href="#" class="arrow right1"></a>
 	</div>
 		
+
 	<div class="socials">
-			<a href="https://www.instagram.com/denisltatar/">
-				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/insta.png" alt="insta" height="30" width="30"></li>
-			</a>
-			<a href="https://github.com/denisltatar">
-				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/github.png" alt="github" height="30" width="30"></li>
-			</a>
-			<a href="https://www.linkedin.com/in/denisltatar/">
-				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Linkedin.png" alt="linkedin" height="30" width="30"></li>
-			</a>
+		<!-- <a class="insta" href="https://www.instagram.com/denisltatar/">
+			<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/insta.png" alt="insta" height="30" width="30"></li>
+		</a> -->
+		<a class="github" href="https://github.com/denisltatar">
+			<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/github.png" alt="github" height="30" width="30"></li>
+		</a>
+		<a class="linkedin" href="https://www.linkedin.com/in/denisltatar/">
+			<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Linkedin.png" alt="linkedin" height="30" width="30"></li>
+		</a>
 	</div>
+	
+	<!--
+	<div class="about-me">
+		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground.png">
+		 <a href="#" class="arrow right2"></a>
+	</div> -->
 
 </body>    
 </html>
