Created sections. Finished the general layout of the landing page.

--- a/test.html
+++ b/test.html
@@ -53,7 +53,7 @@
 <body>
         <!-- <a href="#" class="arrow left"></a> -->
 		<!-- <a href="#" class="arrow right"></a> -->
-		
+	<section class="landing-page-section">
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -79,29 +79,39 @@
 			</div>
 		</nav>
 
-	<div class="landing-pic">
-		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
-		<a href="#" class="arrow right1"></a>
-	</div>
-		
+		<div class="landing-pic">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
+			<a href="#" class="arrow right1"></a>
+		</div>
+			
 
-	<div class="socials">
-		<!-- <a class="insta" href="https://www.instagram.com/denisltatar/">
-			<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/insta.png" alt="insta" height="30" width="30"></li>
-		</a> -->
-		<a class="github" href="https://github.com/denisltatar">
-			<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/github.png" alt="github" height="30" width="30"></li>
-		</a>
-		<a class="linkedin" href="https://www.linkedin.com/in/denisltatar/">
-			<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Linkedin.png" alt="linkedin" height="30" width="30"></li>
-		</a>
-	</div>
+		<div class="socials">
+			<!-- <a class="insta" href="https://www.instagram.com/denisltatar/">
+				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/insta.png" alt="insta" height="30" width="30"></li>
+			</a> -->
+			<a class="github" href="https://github.com/denisltatar">
+				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/github.png" alt="github" height="30" width="30"></li>
+			</a>
+			<a class="linkedin" href="https://www.linkedin.com/in/denisltatar/">
+				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Linkedin.png" alt="linkedin" height="30" width="30"></li>
+			</a>
+		</div>
+	</section>	
 	
-	<!--
-	<div class="about-me">
-		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground.png">
-		 <a href="#" class="arrow right2"></a>
-	</div> -->
+	<section class="about-me-section">
+		<div class="about-me">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground@2x@2x.png">
+			<!-- <a href="#" class="arrow right2"></a> -->
+		</div>
+	</section>
+
+	<section class="projects-section">
+		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/projectsbackground.png">
+	</section>
+
+	<section class="contact-me-section">
+		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/contactmebackground.png">
+	</section>
 
 </body>    
 </html>
