--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	 <link rel="stylesheet" type="text/css" href="test.css">
+
 	 <!-- <style>
 		/*
 		html {
@@ -51,6 +52,7 @@
  	
 </head>
 <body>
+	<!-- Landing Page Section Begins -->
         <!-- <a href="#" class="arrow left"></a> -->
 		<!-- <a href="#" class="arrow right"></a> -->
 	<section class="landing-page-section">
@@ -97,21 +99,96 @@
 			</a>
 		</div>
 	</section>	
+	<!-- Landing Page Section Ends -->
 	
+	<!-- About Me Section Begins -->
 	<section class="about-me-section">
 		<div class="about-me">
 			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground@2x@2x.png">
 			<!-- <a href="#" class="arrow right2"></a> -->
 		</div>
 	</section>
+	<!-- About Me Section Ends -->
 
+	<!-- Projects Section Begins -->
 	<section class="projects-section">
 		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/projectsbackground.png">
 	</section>
+	<!-- Projects Section Ends -->
 
-	<section class="contact-me-section">
+	<!-- Scrapped Contact Me Section-->
+	<!-- Contact Me Section Begins -->
+	<!--
+	<section class="section-padding" id="contact-me-section">
 		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/contactmebackground.png">
-	</section>
+		
+		 <div class="container">
+			<div class="contact-sec text-center">
+				<h2>Want to <span class="decorate">Hire</span> Me?</h2>
+			</div>
+			
+			<div class="container">
+				<form class="contactForm" method="post" role="form" action="mailto:denis.tatar8@gmail.com" enctype="text/plain">
+					<div class="form">
+						<input type="text" name="name" class="form-control" placeholder="Name" data-rule="minlen:4"> 
+					</div>
 
+					<div class="form">
+							<input type="email" name="email" class="form-control" placeholder="Email" data-rule="email">
+					</div>
+
+					<div class="form">
+							<input type="text" name="subject" class="form-control" placeholder="Subject" data-rule="minlen:4"> 
+					</div>
+					
+					<div class="form">
+						<textarea type="text" name="message" class="form-control" placeholder="Write your message here..." data-rule="minlen:4" rows="5"></textarea>
+					</div>
+
+					<div class="text-center">
+						<button class="btn btn-primary btm-lg" type="submit">Send Message</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</section> -->
+	<!-- Contact Me Section Ends -->
+
+	<!-- Contact Me Section Begins -->
+	<!-- <section class="section-padding" id="contact-me-section">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/contactmebackground.png">
+			
+	</section> -->
+
+	<!-- Contact Me Section Ends -->
+
+
+<form id="contact-form">
+  <p id="dear-denis">Dear Denis,</p>
+  <p>My
+    <label for="your-name">name</label> is
+    <input type="text" name="your-name" id="your-name" minlength="3" placeholder="(your name here)" required> and</p>
+
+  <p>my
+    <label for="email">email address</label> is
+    <input type="email" name="your-email" id="email" placeholder="(your email address)" required>
+  </p>
+
+  <p> I have a
+    <label for="your-message">message</label> for you,</p>
+
+  <p>
+    <textarea name="your-message" id="your-message" placeholder="(your message here)" class="expanding" required></textarea>
+  </p>
+  <p>
+    <button type="submit">
+      <svg version="1.1" class="send-icn" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="36px" viewBox="0 0 100 36" enable-background="new 0 0 100 36" xml:space="preserve">
+        <path d="M100,0L100,0 M23.8,7.1L100,0L40.9,36l-4.7-7.5L22,34.8l-4-11L0,30.5L16.4,8.7l5.4,15L23,7L23.8,7.1z M16.8,20.4l-1.5-4.3
+	l-5.1,6.7L16.8,20.4z M34.4,25.4l-8.1-13.1L25,29.6L34.4,25.4z M35.2,13.2l8.1,13.1L70,9.9L35.2,13.2z" />
+      </svg>
+      <small>SEND</small>
+    </button>
+  </p>
+</form>
 </body>    
 </html>
