Created "Projects" page and set up sections to fill.

--- a/test.html
+++ b/test.html
@@ -9,47 +9,8 @@
 	  <!-- Cool Icons -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	 <link rel="stylesheet" type="text/css" href="test.css">
-
-	 <!-- <style>
-		/*
-		html {
-			font-size: 11px;
-			font-family: DIN Condensed;
-			color: black;
-		} */
-
-		.navbar {
-			font-family: DIN Condensed;
-			font-size: 25px;
-			margin-bottom: 0;
-			border-radius: 0;
-			background-color:  transparent;
-			color: black;
-			padding: 1% 0;
-			font-size: 1.2em;
-			border: 0;
-		}
-
-		.navbar-brand {
-			float: left;
-			min-height: 55px;
-			padding: 0 15px 5px;
-		}
-
-		.navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, 
-		.navbar-inverse .navbar-nav .active a:hover {
-			color: rgb(255, 72, 72);
-			background-color:  transparent;
-		}
-
-		.navbar-inverse .navbar-nav li a {
-			color: black;
-
-		}
-	 </style> -->
- 	
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
 	<!-- Landing Page Section Begins -->
@@ -72,7 +33,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li class="home"><a href="#">HOME</a></li>
 						<li class="about"><a href="#">ABOUT</a></li>
-						<li class="projects"><a href="#">PROJECTS</a></li>
+						<li class="projects"><a href="projects.html">PROJECTS</a></li>
 						<li class="resume"><a href="file:///Users/denisltatar/OneDrive%20-%20University%20of%20Waterloo/OneDrive/School/1st%20Year/Resume/First%20Co-op%20Resume/PDFs/Denis%20Tatar%20Resume.pdf">RESUME</a>
 						</li>
 						<li class="contact"><a href="#">CONTACT</a></li>
@@ -174,9 +135,7 @@
     <input type="email" name="your-email" id="email" placeholder="(your email address)" required>
   </p>
 
-  <p> I have a
-    <label for="your-message">message</label> for you,</p>
-
+  <p> I have a <label for="your-message">message</label> for you,</p>
   <p>
     <textarea name="your-message" id="your-message" placeholder="(your message here)" class="expanding" required></textarea>
   </p>
