Created .php file for contact form.

--- a/test.html
+++ b/test.html
@@ -124,7 +124,7 @@
 	<!-- Contact Me Section Ends -->
 
 
-<form id="contact-form">
+<form action="contact.php" id="contact-form">
   <p id="dear-denis">Dear Denis,</p>
   <p>My
     <label for="your-name">name</label> is
