Updated the "projects" page. Still need to include hover effect on home page for each project shown.

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         </nav>
         
         <div class="project-1">
-                <img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
+                <img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/privaseeable.png">
                 <a href="#" class="arrow right1"></a>
         </div>
 
@@ -53,7 +53,7 @@
 	<!-- Project 2 Begins -->
 	<section class="project-2-section">
 		<div class="project-2">
-			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground@2x@2x.png">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/porschecarconnect.png">
 			<!-- <a href="#" class="arrow right2"></a> -->
 		</div>
 	</section>
@@ -62,7 +62,7 @@
 
 	<!-- Project 3 Begins -->
 	<section class="project-3-section">
-		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground@2x@2x.png">
+		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/moodplaylist.png">
 	</section>
     <!-- Project 3 Ends -->
     
@@ -70,11 +70,20 @@
     <!-- Project 4 Begins -->
 	<section class="project-4-section">
             <div class="project-4">
-                <img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground@2x@2x.png">
+                <img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/raceit.png">
                 <!-- <a href="#" class="arrow right2"></a> -->
             </div>
     </section>
-    <!-- Project 4 Ends -->
+	<!-- Project 4 Ends -->
+	
+	<!-- Project 4 Begins -->
+	<section class="project-5-section">
+		<div class="project-5">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/portfoliowebsite.png">
+			<!-- <a href="#" class="arrow right2"></a> -->
+		</div>
+</section>
+<!-- Project 4 Ends -->
 
 	
 
