--- a/test.html
+++ b/test.html
@@ -73,7 +73,27 @@
 
 	<!-- Projects Section Begins -->
 	<section class="projects-section">
-		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/projectsbackground.png">
+		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/projectsbackground.pnG">
+		<div class="proj-1">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/privpic.pnG">
+			<h2>Privaseeable</h2>
+			<h3>Web Development</h3>
+		</div>
+		<div class="proj-2">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/porschepic.pnG">
+			<h2></h2>
+			<h3></h3>
+		</div>
+		<div class="proj-3">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/facepic.pnG">
+			<h2></h2>
+			<h3></h3>
+		</div>
+		<div class="proj-4">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/websitepic.pnG">
+			<h2></h2>
+			<h3></h3>
+		</div>
 	</section>
 	<!-- Projects Section Ends -->
 
