Updated the "projects" page. Also updated the projects section on "home" page.

--- a/projects.html
+++ b/projects.html
@@ -41,11 +41,12 @@
         </nav>
         
         <div class="project-1">
-                <img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/privaseeable.png">
-                <a href="#" class="arrow right1"></a>
+			<video width=500 controls>
+					<source src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Privaseeablevideo.mp4" type="video/mp4">
+			</video>
+            <img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/privaseeable.png">
+			<a href="#" class="arrow right1"></a>	
         </div>
-
-
     </section>	
     <!-- Project 1 End -->
     
@@ -53,9 +54,12 @@
 	<!-- Project 2 Begins -->
 	<section class="project-2-section">
 		<div class="project-2">
+				<video controls>
+						<source src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Porschevideo.mp4" type="video/mp4">
+				</video>
 			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/porschecarconnect.png">
 			<!-- <a href="#" class="arrow right2"></a> -->
-		</div>
+		</div>		
 	</section>
 	<!-- Project 2 Ends -->
 
