--- a/test.html
+++ b/test.html
@@ -73,27 +73,36 @@
 
 	<!-- Projects Section Begins -->
 	<section class="projects-section">
-		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/projectsbackground.pnG">
 		<div class="proj-1">
-			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/privpic.pnG">
-			<h2>Privaseeable</h2>
-			<h3>Web Development</h3>
+			<a href="projects.html">
+				<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/privpic.pnG">
+			</a>
+			<!-- <h2>Privaseeable</h2>
+			<h3>Web Development</h3> -->
 		</div>
 		<div class="proj-2">
-			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/porschepic.pnG">
+			<a href="projects.html">
+				<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/porschepic.pnG">
+			</a>
 			<h2></h2>
 			<h3></h3>
 		</div>
 		<div class="proj-3">
-			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/facepic.pnG">
+			<a href="projects.html">
+				<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/facepic.pnG">
+			</a>
 			<h2></h2>
 			<h3></h3>
 		</div>
 		<div class="proj-4">
-			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/websitepic.pnG">
+			<a href="projects.html">
+				<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/websitepic.pnG">
+			</a>
 			<h2></h2>
 			<h3></h3>
 		</div>
+		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/projectsbackground.pnG">
+		
 	</section>
 	<!-- Projects Section Ends -->
 
@@ -143,31 +152,32 @@
 
 	<!-- Contact Me Section Ends -->
 
+<section class="form-section">
+	<form action="contact.php" id="contact-form">
+	<p id="dear-denis">Dear Denis,</p>
+	<p>My
+		<label for="your-name">name</label> is
+		<input type="text" name="your-name" id="your-name" minlength="3" placeholder="(your name here)" required> and</p>
 
-<form action="contact.php" id="contact-form">
-  <p id="dear-denis">Dear Denis,</p>
-  <p>My
-    <label for="your-name">name</label> is
-    <input type="text" name="your-name" id="your-name" minlength="3" placeholder="(your name here)" required> and</p>
+	<p>my
+		<label for="email">email address</label> is
+		<input type="email" name="your-email" id="email" placeholder="(your email address)" required>
+	</p>
 
-  <p>my
-    <label for="email">email address</label> is
-    <input type="email" name="your-email" id="email" placeholder="(your email address)" required>
-  </p>
-
-  <p> I have a <label for="your-message">message</label> for you,</p>
-  <p>
-    <textarea name="your-message" id="your-message" placeholder="(your message here)" class="expanding" required></textarea>
-  </p>
-  <p>
-    <button type="submit">
-      <svg version="1.1" class="send-icn" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="36px" viewBox="0 0 100 36" enable-background="new 0 0 100 36" xml:space="preserve">
-        <path d="M100,0L100,0 M23.8,7.1L100,0L40.9,36l-4.7-7.5L22,34.8l-4-11L0,30.5L16.4,8.7l5.4,15L23,7L23.8,7.1z M16.8,20.4l-1.5-4.3
-	l-5.1,6.7L16.8,20.4z M34.4,25.4l-8.1-13.1L25,29.6L34.4,25.4z M35.2,13.2l8.1,13.1L70,9.9L35.2,13.2z" />
-      </svg>
-      <small>SEND</small>
-    </button>
-  </p>
-</form>
+	<p> I have a <label for="your-message">message</label> for you,</p>
+	<p>
+		<textarea name="your-message" id="your-message" placeholder="(your message here)" class="expanding" required></textarea>
+	</p>
+	<p>
+		<button type="submit">
+		<svg version="1.1" class="send-icn" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="36px" viewBox="0 0 100 36" enable-background="new 0 0 100 36" xml:space="preserve">
+			<path d="M100,0L100,0 M23.8,7.1L100,0L40.9,36l-4.7-7.5L22,34.8l-4-11L0,30.5L16.4,8.7l5.4,15L23,7L23.8,7.1z M16.8,20.4l-1.5-4.3
+		l-5.1,6.7L16.8,20.4z M34.4,25.4l-8.1-13.1L25,29.6L34.4,25.4z M35.2,13.2l8.1,13.1L70,9.9L35.2,13.2z" />
+		</svg>
+		<small>SEND</small>
+		</button>
+	</p>
+	</form> 
+</section>
 </body>    
 </html>
