Added "smooth scrolling" to my main page.

--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
 	<!-- Landing Page Section Begins -->
         <!-- <a href="#" class="arrow left"></a> -->
 		<!-- <a href="#" class="arrow right"></a> -->
-	<section class="landing-page-section">
+	<section class="landing-page-section" id="landing-section">
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -31,12 +31,12 @@
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="home"><a href="#">HOME</a></li>
-						<li class="about"><a href="#">ABOUT</a></li>
+						<li class="home"><a href="#landing-section">HOME</a></li>
+						<li class="about"><a href="#about-me-section">ABOUT</a></li>
 						<li class="projects"><a href="projects.html">PROJECTS</a></li>
 						<li class="resume"><a href="file:///Users/denisltatar/OneDrive%20-%20University%20of%20Waterloo/OneDrive/School/1st%20Year/Resume/First%20Co-op%20Resume/PDFs/Denis%20Tatar%20Resume.pdf">RESUME</a>
 						</li>
-						<li class="contact"><a href="#">CONTACT</a></li>
+						<li class="contact"><a href="#contact-section">CONTACT</a></li>
 					</ul>
 				</div>
 			</div>
@@ -63,7 +63,7 @@
 	<!-- Landing Page Section Ends -->
 	
 	<!-- About Me Section Begins -->
-	<section class="about-me-section">
+	<section class="about-me-section" id="about-me-section">
 		<div class="about-me">
 			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground@2x@2x.png">
 			<!-- <a href="#" class="arrow right2"></a> -->
@@ -72,7 +72,7 @@
 	<!-- About Me Section Ends -->
 
 	<!-- Projects Section Begins -->
-	<section class="projects-section">
+	<section class="projects-section" id="projects-section">
 		<div class="proj-1">
 			<a href="projects.html">
 				<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/privpic.pnG">
@@ -152,7 +152,7 @@
 
 	<!-- Contact Me Section Ends -->
 
-<section class="form-section">
+<section class="form-section" id="contact-section">
 	<form action="contact.php" id="contact-form">
 	<p id="dear-denis">Dear Denis,</p>
 	<p>My
