Starting over. New design and everything.

--- a/test.html
+++ b/test.html
@@ -2,20 +2,30 @@
 <html>
 <head>
 	<title>My Test Website</title>
+
+	<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, intial-scale=1.0">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  <!-- Cool Icons -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="test.css">
+  	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+	<link rel="stylesheet" type="text/css" href="test.css">	
 </head>
 <body>
 	<!-- Landing Page Section Begins -->
         <!-- <a href="#" class="arrow left"></a> -->
 		<!-- <a href="#" class="arrow right"></a> -->
+	<!-- 
 	<section class="landing-page-section" id="landing-section">
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
@@ -40,45 +50,93 @@
 					</ul>
 				</div>
 			</div>
-		</nav>
+		</nav> -->
 
-		<div class="landing-pic">
-			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png">
-			<a href="#" class="arrow right1"></a>
-		</div>
+		<header>
+			<nav>
+				<ul class="nav__links">
+					<li><a href="#">HOME</a></li>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">PROJECTS</a></li>
+					<li><a href="#">RESUME</a></li>
+					
+				</ul>
+			</nav>
+
+			<a class="cta" href="#""><button>CONTACT</button></a>
+		</header>
+
+		<h3>HEYO</h3>
+
+<!--
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/background.png" class="img-fluid" alt="Responsive image">
+			<div class="container-fluid">
+				<a href="about-me-section" class="arrow right1"></a>
+			</div>
+		</div> -->
 			
+	<div class="container-fluid" id="socials">
+			<div class="col-md-3">
+			</div>
+			<div class="col-md-8">
+			</div>
 
-		<div class="socials">
-			<!-- <a class="insta" href="https://www.instagram.com/denisltatar/">
-				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/insta.png" alt="insta" height="30" width="30"></li>
-			</a> -->
-			<a class="github" href="https://github.com/denisltatar">
-				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/github.png" alt="github" height="30" width="30"></li>
-			</a>
-			<a class="linkedin" href="https://www.linkedin.com/in/denisltatar/">
-				<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Linkedin.png" alt="linkedin" height="30" width="30"></li>
-			</a>
-		</div>
-	</section>	
+			<div class="col-md-1">	
+				<a class="github" href="https://github.com/denisltatar">
+					<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/github.png" alt="github" height="30" width="30"></li>
+				</a>
+				<a class="linkedin" href="https://www.linkedin.com/in/denisltatar/">
+					<li><img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/Linkedin.png" alt="linkedin" height="30" width="30"></li>
+				</a>			
+			</div>
+		</div> 
 	<!-- Landing Page Section Ends -->
 	
 	<!-- About Me Section Begins -->
+	<!--
+	<div class="container-fluid" id="about-me-section">
+			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground@2x@2x.png">
+	</div> -->
+
+
+<!-- 
 	<section class="about-me-section" id="about-me-section">
 		<div class="about-me">
 			<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/aboutmebackground@2x@2x.png">
-			<!-- <a href="#" class="arrow right2"></a> -->
+			
 		</div>
-	</section>
+	</section> -->
 	<!-- About Me Section Ends -->
 
 	<!-- Projects Section Begins -->
+	<!--
 	<section class="projects-section" id="projects-section">
+		<div class="containe">
+			<div class="row">
+				<div class="col">
+					Col 1
+				</div>
+				<div class="col">
+					Col 2
+				</div>
+			</div>
+
+			<div class="row">
+				row 2
+			</div>
+
+			<div class="row">
+				row 3
+			</div>
+			
+		</div>
+
 		<div class="proj-1">
 			<a href="projects.html">
 				<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/privpic.pnG">
 			</a>
-			<!-- <h2>Privaseeable</h2>
-			<h3>Web Development</h3> -->
+			<h2>Privaseeable</h2>
+			<h3>Web Development</h3>
 		</div>
 		<div class="proj-2">
 			<a href="projects.html">
@@ -103,7 +161,7 @@
 		</div>
 		<img src="file:///Users/denisltatar/Desktop/Portfolio%20Website/Portfolio-Website/projectsbackground.pnG">
 		
-	</section>
+	</section> -->
 	<!-- Projects Section Ends -->
 
 	<!-- Scrapped Contact Me Section-->
@@ -151,7 +209,7 @@
 	</section> -->
 
 	<!-- Contact Me Section Ends -->
-
+<!-- 
 <section class="form-section" id="contact-section">
 	<form action="contact.php" id="contact-form">
 	<p id="dear-denis">Dear Denis,</p>
@@ -178,6 +236,12 @@
 		</button>
 	</p>
 	</form> 
-</section>
+</section> --> 
+
+	<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>    
 </html>
