Tried to add a sticky header.

--- a/new.html
+++ b/new.html
@@ -19,6 +19,9 @@
     <!-- Custom css file -->
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- Resposive css file -->
+    <link rel="stylesheet" href="./css/responsive.css">
+
 </head>
 
 <body>
