--- a/new.html
+++ b/new.html
@@ -71,7 +71,7 @@
         <!-- ============================= Start Banner Area ============================= -->
         <section class="site-banner">
             <div class="container">
-                <div class="row">
+                <div class="row" id="help">
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
                         <h1 class="title-text text-uppercase">I am Denis Tatar</h1>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 banner-img">
-                        <img src="./img/bannerme.png" alt="banner-img" class="img-fluid?">
+                        <img src="./img/bannerme.png" alt="banner-img" class="img-fluid?" width="724" height="703">
                     </div>
                 </div>
             </div>
