Making minor grammer changes.

--- a/new.html
+++ b/new.html
@@ -167,7 +167,7 @@
                                 <p class="para-bold">API Used: 
                                     <img src=" ./img/firebase-icon.png" alt="" width="34" height="33" id="firebase-icon">
                                 </p>
-                                <p class="para-bold">Languages: Swift</p>
+                                <p class="para-bold">Languages: Swift 5</p>
                                 <p class="para-bold" id="github-link">Github Repository:
                                     <a href="https://github.com/denisltatar/My-Second-App">
                                         <i class="fab fa-github" id="github-repo"></i>
@@ -235,7 +235,7 @@
                             <div class="modal-content2">
                                 <span class="close2">&times;</span>
                                 <h4 class="text-center" id="porsche-title">PrivaSeeable</h4>
-                                <p class="para-bold" id="style-work">Type of Work: Web Development</p>
+                                <p class="para-bold" id="style-work">Type of Work: Front-end Web Development</p>
                                 <p class="para-bold">Number of Hours: 12 hours</p>
                                 <p class="para-bold">Software Used:
                                     <img src="./img/illustrator.png" alt="" width="31" height="30" id="illustrator-icon">
@@ -318,7 +318,7 @@
                                 <div class="modal-content3">
                                     <span class="close3">&times;</span>
                                     <h4 class="text-center" id="porsche-title">Mood Playlist</h4>
-                                    <p class="para-bold" id="style-work">Type of Work: Web Development</p>
+                                    <p class="para-bold" id="style-work">Type of Work: Front-end Web Development</p>
                                     <p class="para-bold">Number of Hours: 15+ hours</p>
                                     <p class="para-bold">Software Used:
                                         <img src="./img/illustrator.png" alt="" width="31" height="30" id="illustrator-icon">
@@ -359,7 +359,7 @@
                                     <div class="modal-content4">
                                         <span class="close4">&times;</span>
                                         <h4 class="text-center" id="porsche-title">Portfolio Website</h4>
-                                        <p class="para-bold" id="style-work">Type of Work: Web Development</p>
+                                        <p class="para-bold" id="style-work">Type of Work: Front-end Web Development</p>
                                         <p class="para-bold">Number of Hours: 30+ hours</p>
                                         <p class="para-bold">Software Used:
                                             <img src=" ./img/photoshop.dms" alt="" width="34" height="33" id="photoshop-icon">
