Trying to update the mobile view.

--- a/new.html
+++ b/new.html
@@ -71,7 +71,7 @@
         <!-- ============================= Start Banner Area ============================= -->
         <section class="site-banner">
             <div class="container">
-                <div class="row" id="help">
+                <div class="row">
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
                         <h1 class="title-text text-uppercase">I am Denis Tatar</h1>
@@ -83,8 +83,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 banner-img">
-                        <img src="./img/bannerme.png" alt="banner-img" class="img-fluid?" width="724" height="703">
+                    <div class="col-lg-6 col-md-12">
+                        <img src="./img/bannerme.png" id="profile-pic" alt="banner-image" class="img-fluid?" width="724" height="703">
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
         <!-- ============================= End Banner Area ============================= -->
         <!-- ============================= Start About Area ============================= -->
         <section class="about-area" id="about-area">
-            <div class="container-fluid">
+            <div class="container-fluid" id="about-my-area">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         <div class="about-image">
@@ -143,8 +143,8 @@
                     <div class="col" id="row1-col1">
                         <!-- Trigger/Open The Modal -->
                         <div class="text-center">
-                            <button id="myBtn">
-                                <img src="./img/porsche-app-cover.png" alt="" width="215" height="410">
+                            <button id="myBtn" id="mobile-cover">
+                                <img id="mobile" src="./img/porsche-app-cover.png" alt="" width="215" height="410">
                             </button>
                             <p class="para-bold" id="new-project-title">Porsche Car Connect</p>
                         </div>
