Made small little detailed changes

--- a/new.html
+++ b/new.html
@@ -152,7 +152,7 @@
         <section class="new-projects" id="new-projects">
             <div class="container" id="project-container">
                 <div class="project-title pb-5 text-center">
-                    <h1 class="text-uppercase title-h1">Coding Projects</h1>
+                    <h1 class="text-uppercase title-h1" id="project-title">Coding Projects</h1>
                 </div>
 
                 <!-- START FIRST ROW CODING PROJECTS -->
@@ -273,7 +273,7 @@
                                     and I used Javascript to create this
                                     chrome extension that takes advantage
                                     of CSS elements to maintain user
-                                    privacy by obsuring their screen’s text from
+                                    privacy by obscuring their screen’s text from
                                     potential onlookers. We implemented a
                                     “blur” feature that allows the user to blur
                                     onscreen text and seletively unblur text by
@@ -789,7 +789,7 @@
         <section class="design-projects" id="design-projects">
         <div class="container" id="project-container">
             <div class="project-title pb-5 text-center">
-                <h1 class="text-uppercase title-h1">Design Projects</h1>
+                <h1 class="text-uppercase title-h1" id="project-title">Design Projects</h1>
             </div>
 
 
